[Synthetic Click] Dispatch mouseout soon after mouseup https://bugs.webkit.org/show_bug.cgi?id=195575 <rdar://problem/47093049>

Reviewed by Simon Fraser.

Source/WebCore:

Let's fire a mouseout event when a click is submitted as the result of a tap. It helps to dismiss content which would otherwise require you to move the mouse (cases like control bar on youtube.com).

Test: fast/events/touch/ios/content-observation/mouse-out-event-should-fire-on-click.html

* page/EventHandler.h:
* page/ios/EventHandlerIOS.mm:
(WebCore::EventHandler::dispatchFakeMouseOut):

Source/WebKit:

* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::completeSyntheticClick):

LayoutTests:

* fast/events/touch/ios/content-observation/mouse-out-event-should-fire-on-click-expected.txt: Added.
* fast/events/touch/ios/content-observation/mouse-out-event-should-fire-on-click.html: Added.


Canonical link: https://commits.webkit.org/209893@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@242763 268f45cc-cd09-0410-ab3c-d52691b4dbfc